--- a/WebToken/appsettings.json
+++ b/WebToken/appsettings.json
@@ -11,5 +11,9 @@
     "Issuer": "WebToken",
     "Audience": "WebTokenClient",
     "ExpirationMinutes": 30
+  },
+  "ConnectionStrings": {
+    "SQLite": "Data Source=WebTokenDb.sqlite"
   }
 }
+
