Fixed token-info endpoint

--- a/WebToken/appsettings.json
+++ b/WebToken/appsettings.json
@@ -10,7 +10,7 @@
     "Key": "OrkunElifMelikeWebTokenKey20252025.",
     "Issuer": "WebToken",
     "Audience": "WebTokenClient",
-    "ExpirationMinutes": 30
+    "TokenExpirationInSeconds": 10
   },
   "ConnectionStrings": {
     "SQLite": "Data Source=WebTokenDb.sqlite"
