--- a/WebToken/WebToken.csproj
+++ b/WebToken/WebToken.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>f52f94df-cdc7-4504-b482-ef429c821d37</UserSecretsId>
   </PropertyGroup>
 
 </Project>
